examples/test/testpolicy9804.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9804
  namespace: namespace294
spec:
  podSelector:
    matchLabels:
      key2: value47
      key19: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value21
          key19: value28
      podSelector:
        matchLabels:
          key13: value11
